

syntax = "proto3";
option csharp_namespace = "AIS";
import "google/protobuf/timestamp.proto";
package osebe;


service Osebe {
	// Create
	rpc CreateOseba(CreateOsebaRequest) returns (CreateOsebaReply) {}

	//Read single
	rpc GetOsebe(GetOsebaRequest) returns (GetOsebaReply) {}

	//Read list

	//Update
	rpc UpdateOseba(UpdateOsebaRequest) returns (UpdateOsebaReply) {}

	//Delete
	rpc DeleteOseba(DeleteOsebaRequest) returns (DeleteOsebaReply) {}



	
}	
	message OsebaMessage
	{
		
		int32 id = 1;
		string ime = 2;
		string priimek = 3;
		google.protobuf.Timestamp letorojstva =4;
		//int32 letorojstva =4;
		int32 emso = 5;
		
	}

	message CreateOsebaRequest
	{	
		 OsebaMessage osebe = 1;
		//string Ss =1;
		//Oseba oseba =1;
		//int id = 1;
		//string ime = 2;
		//string priimek = 3;
		//int letorojstva =4;
		//int emso = 5;

	
	}

	message CreateOsebaReply //Reply
	{
		//Oseba oseba =1;
		 //string message = 1;
		 //repeated OsebaMessage osebe = 1;
		 string sporocilo = 1;

	}

	message GetOsebaRequest
	{
		
	}

	message GetOsebaReply
	{
		 repeated OsebaMessage Osebe1 = 1;
		
	}


	message UpdateOsebaRequest
	{
		OsebaMessage osebe = 1;
	}

	message UpdateOsebaReply
	{
		string sporocilo = 1;
	}

	message DeleteOsebaRequest
	{
		int32 id = 1;
	}

	message DeleteOsebaReply
	{
		string sporocilo = 1;
	}
